[package]
name = "bitcoin"
version = "0.1.0"
authors = ["Yogi flipchan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false }
libsecp256k1 = "0.3.5"
sha2 = "0.9.1"
base64 = "0.12.3"
hex-literal = "0.3.1"
ripemd160 = "0.9.1"
bitcoin = "*"
hex= "*"

